--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>phone hunting api</title>
     <link rel="shortcut icon" href="images/congo.png" type="image/x-icon">
-
+ 
     <!-- tailwind and daisy ui link -->
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
@@ -45,12 +45,12 @@
     <header class="max-w-screen-xl mx-auto">
 
 
-        <nav>
+        <!-- <nav>
             <ul class="flex justify-between items-center p-7">
                 <li class="text-2xl font-bold">Hot gadgets</li>
                 <li class=""><button class="btn btn-primary">sign up</button></li>
             </ul>
-        </nav>
+        </nav> -->
 
         <!-- bannar  section -->
 
