--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <header class="max-w-screen-xl mx-auto">
 
 
-        <!-- <nav>
+        <nav>
             <ul class="flex justify-between items-center p-7">
                 <li class="text-2xl font-bold">Hot gadgets</li>
                 <li class=""><button class="btn btn-primary">sign up</button></li>
             </ul>
-        </nav> -->
+        </nav>
 
         <!-- bannar  section -->
 
